istio-conf/JwtAuthorization.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "JWT-Authorization"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["auth@istio/*"]
    when:
    - key: request.auth.claims[role]
      values: ["admin"]
    to:
    - operation:
        hosts: ["webapp.istioinaction.io"]
